17 - Activacion casilla, conexion BD nueva

--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -98,7 +98,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/button_bg"
-        android:enabled="false"
+        android:visibility="gone"
         android:text="Código QR"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -115,7 +115,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/button_bg"
-        android:enabled="false"
+        android:visibility="gone"
         android:text="Activar"
         android:textColor="@color/white"
         android:textSize="16sp"
