18 - Validaciones en activacion

--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -116,6 +116,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/button_bg"
         android:visibility="gone"
+        android:enabled="false"
         android:text="Activar"
         android:textColor="@color/white"
         android:textSize="16sp"
